
2008-11-22  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 4.4.4

2008-10-22  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Rebuilt for python 2.6

2008-08-09  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 4.4.3

2008-07-06  Douglas Soares de Andrade  <douglas@archlinux.org>

	* Updated for i686: 4.4.2
