@@ -1,4 +1,8 @@
 
+2009-04-11  Douglas Soares de Andrade  <douglas@archlinux.org>
+
+	* Fixing the rpath issue, thanks Gerardo
+
 2008-11-22  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Updated for i686: 4.4.4
